--- a/src/sass/header.sass
+++ b/src/sass/header.sass
@@ -6,8 +6,7 @@ body
 	min-width: 320px
 	position: relative
 	line-height: 1.6
-	font-family: "Open Sans", sans-serif
+	font-family: "Roboto", sans-serif
 	overflow-x: hidden
-
 .hidden
 	display: none
