--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -46,7 +46,7 @@ body textarea:required:valid
 		cursor: pointer
 		display: none
 		height: 16px
-		margin: 0px 0 0 18px
+		margin: 0px 0 0 20px
 		outline: none
 		width: 20px
 		transition: background-color 0.25s ease;
@@ -57,7 +57,7 @@ body textarea:required:valid
 		display: none
 		font-size: 18px
 		float: right
-		margin: 16px
+		margin: 16px 28px 0 0
 	&__logo
 		color: #444444
 		display: inline-block
@@ -73,7 +73,7 @@ body textarea:required:valid
 		margin: -30px 14px 0 30px
 	&__search
 		display: inline-block
-		max-width: 520px
+		max-width: 500px
 		width: 100%
 		input[type="search"]
 			background-color: rgba(255, 255, 255, 0.0)
@@ -87,7 +87,7 @@ body textarea:required:valid
 			margin: 0 20px
 			opacity: .8
 			outline: none
-			padding: 1px 10px 10px 28px
+			padding: 1px 10px 8px 28px
 			transition: All 0.25s ease;
 			width: 100%
 			&:hover
@@ -189,7 +189,7 @@ body textarea:required:valid
 			font-size: 18px
 			font-weight: 500
 			letter-spacing: 1px
-			margin: 0
+			margin: 0 0 12px 0
 		&:hover
 			background-color: lighten($color-blue,30%)
 			border: 1px solid lighten($color-blue,10%)
@@ -208,14 +208,14 @@ body textarea:required:valid
 				color: darken($color-gray,40%)
 				display: inline-block
 				font-size: 16px
-				font-weight: 600
+				float: right
 				text-decoration: line-through
 				margin: 10px 0
 			i
 				float: right
 		&__desc
 			color: darken($color-gray,30%)
-			margin: 12px 0px 12px 0px
+			margin: 0px 0px 12px 0px
 			font-size: 15px
 			font-weight: 500
 			height: 70px
@@ -227,7 +227,12 @@ body textarea:required:valid
 	&-item-special
 		color: darken($color-gray,50%)
 		flex: 0 1 555px
-		padding: 24px 14px
+		padding: 25px 14px
+		height: 100%
+		h4
+			float: right
+			vertical-align: top
+			width: 270px
 		&:hover
 			border: 1px solid $color-red
 			background-color: lighten($color-red,27%)
@@ -239,20 +244,21 @@ body textarea:required:valid
 		&__desc
 			display: inline-block
 			color: darken($color-gray,30%)
-			margin: 12px 0 8px 0
+			float: right
 			font-size: 15px
 			font-weight: 500
 			height: 240px
-			padding: 0 25px
-			width: 230px
+			max-width: 270px
 		&__cost
-			border-top: 1px solid $color-red
-			color: $color-red
-			display: inline-block
+			font-size: 16px
 			float: right
-			position: relative
-			padding: 12px 0 0 5px
-			width: 263px
+			&--special
+				border-top: 1px solid $color-blue
+				color: $color-blue
+				display: inline-block
+				letter-spacing: 1px
+				padding: 12px 0
+				width: 100%
 			i
 				float: right
 .dark-bg
