--- a/src/template/header.html
+++ b/src/template/header.html
@@ -23,7 +23,7 @@
         <div class="container">
             <button id="btn-menu" class="header__btn-menu"></button>
             <div class="header__icons">
-                <i id="btn-search" class="fa fa-search"></i>
+                <i id="btn-search" class="fa fa-search header__icons--search"></i>
                 <i id="btn-search" class="fa fa-shopping-cart"></i>
             </div>
             <div class="header__logo">
