--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -13,7 +13,7 @@
 		&__icons
 			display: block
 			&--search
-				display: none
+				display: inline-block
 		&__logo
 			margin: 16px 18px 0 27px
 			font-size: 18px
@@ -25,7 +25,6 @@
 		&__search
 			max-width: 60%
 	.nav
-		margin: 0
 		padding: 0
 		width: 100%
 		display: none
@@ -46,27 +45,30 @@
 			background-color: #FFF
 			display: none
 			left: 50%;
-			margin-left: -200px;
+			margin-left: -44%;
 			position: absolute
-			padding: 20px
+			padding: 4%
 			top: 20px
-			width: 360px
+			width: 80%
 			z-index: 1000
-			&__label
-				margin: 0
+			&__label		
 				display: none
 			&__price-input
+				display: block
 				height: 38px
+				margin: 0px 0 30px 0;
+				padding: 0 4%
 				text-align: right
-				margin: 0 0 20px 0
-				width: 97%
+				width: 92%
 			&__input-label
-				padding: 12px
+				display: block
+				margin: 15px 0 -27px 0
+				padding: 0 0 0 12px
 			&__select
+				color: darken($color-gray,30%)
 				height: 38px
 				margin: 0 0 20px 0
 				padding: 0
-				text-align: center
 				width: 100%
 
 /* Medium Devices, Desktops */
@@ -91,15 +93,25 @@
 			input[type="search"]
 				background: none
 				border: 0
-				padding: 16px 0px 16px 0px
+				padding: 16px 0px 16px 20px
+				margin: 0
 	.nav
 		&__item
 	.catalog
+		margin: 0 25px
 		&-item
 			border: 0px
 			border-bottom: 1px solid $color-gray
 			flex: 0 0 100%
-			max-width: 400px
+			&-special
+				&__photo
+					display: block
+					max-width: 160px
+				&__desc
+					float: left
+				&__cost
+					float: left
+					width: 100%
 	/*Disable Animation on Mobile Devices*/
 	.animated
 		/*CSS transitions*/
@@ -126,5 +138,4 @@
 @media only screen and (max-width : 480px)
 	/**/
 	.container
-		min-width: 400px
 		width: 100%
